# akita_semifreddo

./: .gitignore  LICENCE  README.md  akita_FSP_test.ipynb  akita_SA_test.ipynb  akita_test.ipynb  check_best_insertion_place.ipynb  create_Car2.ipynb  create_boundary.ipynb  create_dot.ipynb  create_flame.ipynb  create_fountain.ipynb  create_full_genomic_map.ipynb  create_strong_boundary_transplant.ipynb  create_target.ipynb  environment.yml  fragment_indices.npy  fragment_indices.pt  helper.py  make_peaks_plot.ipynb  pyproject.toml  requirements.txt  run_full_ledidi.ipynb  run_full_sequence_ledidi.ipynb  run_ledidi.ipynb  run_ledidi.py  run_semifreddo_ledidi.ipynb  strong_boundary.npy  test_pruning.ipynb  test_tangermeme_fimo.ipynb
CTCF_elimination/: ctcf_elimination_analysis.ipynb  ctcf_elimination_analysis.py  homer_background_OG.sh  homer_instances_search.sh  interfold_analysis.ipynb  motif1_analysis.ipynb  polyAT_lengths.ipynb  puffin_gro_cap_preds_analysis.ipynb  puffin_preds_analysis.ipynb  run_ctcf_elimination.ipynb  run_ctcf_elimination.py  run_ctcf_elimination.sh
alpha_genome/: Car2_folding_transcription.ipynb  alphagenome_mouse_accuracy.ipynb  alphagenome_targets.ipynb  calculate_urq_mean.ipynb  contact_maps.ipynb  contact_maps_mouse.ipynb  prepare_modified_seqs.ipynb  tutorial.ipynb  urq_mean_comparison.ipynb
backgrounds/: convert_background_fasta_to_pt.py  generate_backgrounds.py  generate_backgrounds.sh  generate_train_backgrounds.py  generate_train_shuffled.py  generate_train_shuffled.sh  shuffle_analysis.ipynb  shuffle_calculate_stats.py  (+6 more)
(+632 files in other folders)
